repositorio con footer, videos y algunas recetas mas

--- a/historia.html
+++ b/historia.html
@@ -43,7 +43,8 @@
         <div class="videos">
             <article class="videos__Articulo"> 
                 <div class="videos__Disc"> <h2 class="videos__Titulo2">Creacion de Porter y Stout</h2>
-                        <p class="videos__Parrafo">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis, nihil ipsum saepe perferendis omnis nobis est ea at vitae dicta alias beatae consequuntur quae ipsam cumque commodi dolor delectus expedita!</p>
+                        <p class="videos__Parrafo">La pregunta cervecera del millón, ¿cuál es la diferencia entre una stout y una porter? 
+                             Rodrigo Escudero, el fundador de la Cervecería La Patrona, nos ayuda a responderla.</p>
                 </div>
 
                     <iframe class="videos__TamanoVideo"  width="677" height="381" src="https://www.youtube.com/embed/kLd0F45bhrs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -52,14 +53,14 @@
 
             <article class="videos__Articulo">
                 <div class="videos__Disc"><h2 class="videos__Titulo2">Historia de la IPA</h2>
-                        <p class="videos__Parrafo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta quae magni, dolore quas eveniet pariatur voluptates ratione optio molestiae voluptate earum neque perspiciatis vero nesciunt voluptatibus laudantium, corrupti harum. Iure.</p>
+                        <p class="videos__Parrafo">Como se origino la cerveza que tanto esta de moda hoy en dia, el secreto que esconde para que se haya convertido en un engranaje importatisimo en la conservacion de estas bebidas.</p>
                 </div>
                 <iframe class="videos__TamanoVideo"  src="https://www.youtube.com/embed/QX15pqJ6FlU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </article>
 
             <article class="videos__Articulo">
                 <div class="videos__Disc"><h2 class="videos__Titulo2">Historia y caracteristicas Bock</h2>
-                        <p class="videos__Parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid facilis culpa itaque non, deserunt quod quidem, exercitationem cum quasi quae aut a, ad totam? Dolore fugiat provident corporis est alias.</p>
+                        <p class="videos__Parrafo">Aprendamos un poco sobre la cerveza mediabal por excelencia, sus cambios hasta la actualidad y algunas cositas a tener en cuenta para que podamos apreciar sus atributos en una cata.</p>
                 </div>
                 <iframe class="videos__TamanoVideo" src="https://www.youtube.com/embed/goA1YxeDpOk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             
@@ -67,7 +68,13 @@
         </div>
 
   
-     <footer>Copyright..</footer>
+        <footer>  Copyright MancoBeer ® 
+            <div>
+                <a href="https://www.instagram.com/"><img src="./mult/Foot/ig.png" alt="Instagram"></a>
+                <a href="https://www.facebook.com/"><img src="./mult/Foot/fb.png" alt="FaceBook"></a>
+                <a href="https://web.whatsapp.com/"><img src="./mult/Foot/wsp.png" alt="Whatsapp"></a>
+            </div>
+        </footer>
 
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
