--- a/index.html
+++ b/index.html
@@ -145,9 +145,13 @@
       </div> 
 
 
-      
-          <footer>Copyright..</footer>
-
+      <footer>  Copyright MancoBeer ® 
+        <div>
+            <a href="https://www.instagram.com/"><img src="./mult/Foot/ig.png" alt="Instagram"></a>
+            <a href="https://www.facebook.com/"><img src="./mult/Foot/fb.png" alt="FaceBook"></a>
+            <a href="https://web.whatsapp.com/"><img src="./mult/Foot/wsp.png" alt="Whatsapp"></a>
+        </div>
+    </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
