--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
 </head>
 <body>
     <header>
-      <img class="inicio" src="./mult/Logo2.png" alt="logo MancoBeer">
-
-      
-
+      <img class="logoinic" src="./mult/Logo2.png" alt="logo MancoBeer">      
     </header>
 
         <nav class="nav">
